# rockstor-openqa

./: README.md  constants_rockstor.py  establish_config.py  pyproject.toml
job_groups/rockstor/: prepare_systems.yaml  storage_tests.yaml
lib/: main_common.pm  mm_network.pm  utils.pm
lib/Utils/: Kde.pm  Rockstor_webui.pm
products/rockstor/: main.pm
products/rockstor/needles/: boot-confirm_disk_destroy-20220122.json  boot-confirm_password-20220123.json  boot-en_US_selected-20220815.json  boot-keyboard_layout-20220122.json  boot-keyboard_layout-20220815.json  boot-kiwi_bootloader-20220122.json  boot-kiwi_bootloader-boot_from_hdd-20220122.json  boot-kiwi_bootloader-install_selected-20220122.json  boot-license_agreement-20220122.json  boot-login_prompt-20220123.json  boot-root_password-20220122.json  boot-system_locale-20220122.json  boot-time_zone-20220122.json  boot-time_zone-20220815.json  boot-us_keyboard_selected-20220815.json  boot_from_hdd-kiwi_bootloader_Rockstor_NAS-20220201.json  boot_from_hdd-login_prompt-20220201.json  (+90 more)
schedule/installation/: installation.yaml
schedule/prepare_systems/: webui_navigation.yaml
schedule/supportserver/: supportserver.yaml
schedule/webui/: webui_navigation.yaml
tests/installation/: boot.pm  boot_from_hdd.pm  isosize.pm  login.pm  reboot.pm  shutdown.pm
tests/supportserver/: login.pm  setup_multimachine.pm  test_ip.pm  wait_for_children.pm
tests/webui/: browse_to_rockstor.pm  first_login.pm  homepage.pm  setup_network.pm  shutdown_client.pm  standalone_webui_navigation.pm  start_konsole_root.pm  webui_navigation.pm
(+19 files in other folders)
