[tool.poetry]
name = "rockstor-openqa"
version = "0.1.0"
description = ""
authors = ["FroggyFlox <flox2b@gmail.com>"]
readme = "README.md"
packages = [{include = "rockstor_openqa"}]

[tool.poetry.dependencies]
python = "^3.8"
openqa-client = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

